2009-03-14  Eli Zaretskii  <eliz@gnu.org>

	* w32/subproc/sub_proc.c <top level>: Update Copyright years.  Add
	prototype for xmalloc.
	(find_file): Accept 3 arguments PATH_VAR, FULL_FNAME, and FULL_LEN
	instead of an LPOFSTRUCT pointer.  Use xmalloc instead of malloc.
	Loop over an array of extensions, instead of duplicating the same
	code inline.  Use SearchPath followed by CreateFile, instead of
	the obsolete OpenFile.  Fixes Savannah bug #17277.
	(process_begin): Find $(PATH) in `envp', and pass a pointer to it
	to `find_file'.  Fixes Savannah bug #25662.

2009-03-07  Eli Zaretskii  <eliz@gnu.org>

	* function.c (func_shell): Don't close pipedes[1] if it is -1.
	Fixes Savannah bug #20495.

2008-09-30  Eli Zaretskii  <eliz@gnu.org>

	* build_w32.bat (GCCBuild): Use "-gdwarf-2 -g3" instead of
	"-gstabs+ -ggdb3".

	* w32/subproc/build.bat (GCCBuild): Likewise.

2008-09-30  David Russo  <d-russo@ti.com>  (tiny change)

	* job.c (construct_command_argv_internal): Avoid extra backslash
	in batch-mode Unixy shells.  Under DB_JOBS, display the contents
	of the batch file.

2008-05-31  Eli Zaretskii  <eliz@gnu.org>

	* README.W32.template: Remove obsolete text about non-support for
	-jN without Unixy shell.  Remove obsolete text about not supplying
	Visual Studio project files (we do supply them).  Modify text to
	prefer GCC builds to MSC builds.

2008-04-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/make.texi (Empty Targets): Fix typo.

2008-03-27  Paul Smith  <psmith@gnu.org>

	Fix Savannah bug #22379:
	* ar.c (ar_glob_match): Zero the allocated structure.
	* read.c (parse_file_seq): Ditto.

2008-03-08  Brian Dessent  <brian@dessent.net>

	* maintMakefile: Update Translation Project location.

2008-01-26  Eli Zaretskii  <eliz@gnu.org>

	* variable.c (target_environment): Don't use shell_var if its
	`value' field is NULL.

2007-12-22  Eli Zaretskii  <eliz@gnu.org>

	Suggested by Juan Manuel Guerrero <juan.guerrero@gmx.de>:
